# keep-audio-awake

./: .gitignore  Cargo.toml  README.md  build.rs  keep-audio-awake-manifest.rc  keep-audio-awake.exe.manifest
res/: resources.rc
src/: audio.rs  cli.rs  console.rs  gui.rs  ka_service.rs  main.rs  res_ids.rs  ui.rs  util.rs  win_service.rs
src/gui/: res.rs  res_ids.rs  tray_icon.rs
