[package]
name = "keep-audio-awake"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies]
windows-sys = { version = "0.59.0", features = ["Win32", "Win32_Media", "Win32_Media_Audio"] }
native-windows-gui = { version = "1.0.13", optional = true }
windows-service = { version = "0.8.0", optional = true }
ctrlc = { version = "3.4.6", optional = true }

[features]
console = ["dep:ctrlc"]
gui = ["dep:native-windows-gui"]
win_service = ["dep:windows-service"]