[package]
name = "keep-audio-awake"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Media", "Win32_Media_Audio", "Win32_Security", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
native-windows-gui = { version = "1.0.13", optional = true }

windows-service = { version = "0.8.0", optional = true }
ctrlc = { version = "3.4.6", optional = true }

[features]
debug = []
gui_console = []
cli = ["dep:ctrlc"]
gui = ["dep:native-windows-gui"]
win_service = ["dep:windows-service"]