[package]
name = "keep-audio-awake"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Media", "Win32_Media_Audio", "Win32_Security", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
native-windows-gui = { version = "1.0.13" }

[features]
debug = []
console = []